<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Libre Music</string>
    <string name="loading">Loading</string>
    <string name="main_activity">My Library</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="reset_library">Reset Library</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset_library_question">Are you sure that you wish to reset your music library upon next startup?</string>
    <string name="now_playing">Now Playing</string>
    <string name="action_settings">Settings</string>
    <string name="pref_simple">⚙ Simple Settings</string>
    <string name="pref_advanced">⚙ Advanced Settings</string>
    <string name="pref_night">App Theme</string>
    <string name="pref_night_message">Restarting the app is recommended after applying a new theme</string>
    <string name="pref_cue">CUE Sheet Encoding</string>
    <string name="pref_cue_message">Will take effect only after resetting the music library</string>
    <string name="action_search">Search</string>
    <string name="first_slide_title">Welcome to Libre Music</string>
    <string name="first_slide_desc">A free media player that actually works!</string>
    <string name="second_slide_title">Play Your Favourite Songs</string>
    <string name="second_slide_desc">Libre Music supports all popular audio formats, with support for cue files and embedded cue sheets.</string>
    <string name="third_slide_title">Choose The Theme of Your App</string>
    <string name="third_slide_desc">Libre Music supports a light theme, a night theme and a black theme to satisfy all of its users.</string>
    <string name="fourth_slide_title">Find What You Need</string>
    <string name="fourth_slide_desc">Libre Music allows you to quickly search for your favourite artist, album, song, genre or playlist with the press of a button.</string>
    <string name="fifth_slide_title">Almost Done!</string>
    <string name="fifth_slide_desc">Once you press the check button you will be asked to grant permissions, these permissions are needed for the media player to function properly and aren\'t used for anything else other than that. Once you\'ve granted permissions the app will begin scanning your device for songs.</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="temp_songName">Song Name</string>
    <string name="temp_artistAlbumName">Artist Name - Album Name</string>
    <string name="temp_artistName">Artist Name</string>
    <string name="item_song">%d Song</string>
    <string name="item_songs">%d Songs</string>
    <string name="item_album">%d Album</string>
    <string name="item_albums">%d Albums</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="theme_light">Light Theme</string>
    <string name="theme_night">Night Theme</string>
    <string name="theme_black">Black Theme</string>
    <string name="action_add_playlist">Add Playlist</string>
    <string name="action_add_playlist_hint">Enter Playlist Name</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="success">Operation Completed Successfully</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="play">Play</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="action_share">Share</string>
    <string name="share_song">Share a Song</string>
    <string name="share_songs">Share Some Songs</string>
    <string name="text_empty">The text box cannot be empty</string>
    <string name="set_as_ringtone">Set as Ringtone</string>
    <string name="remove_from_playlist">Remove From Playlist</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="permission_modify_settings">The permission to modify system settings must be enabled</string>
    <string name="ringtone_success">The Ringtone Has Been Set Successfully</string>
    <string name="library">Library</string>
    <string name="queue">Queue</string>
    <string name="about">About</string>
    <string name="about_version">Version 2.0.00</string>
    <string name="about_intro">Introduction</string>
    <string name="about_code">Source Code</string>
    <string name="about_author">Author</string>
    <string name="about_info">Danny Damsky</string>
    <string name="about_location">Hadera, Israel</string>
    <string name="about_email">Write an Email</string>
    <string name="about_support">Support Development</string>
    <string name="about_rate">Rate</string>
    <string name="about_donate">Donate</string>
    <string name="send_mail_title">Send mail using…</string>
    <string name="eq">Equalizer</string>
    <string name="eq_summary">Opens your device\'s built-in equalizer (Might not work on some devices)</string>
    <string name="action_sleep_timer">Sleep Timer</string>
    <string name="action_sleep_message">Set the playback duration</string>
    <string name="action_sleep_toast">Music will pause at</string>
    <string name="action_sleep_disable">Do you wish to disable the sleep timer?</string>
    <string name="sleep_timer_disabled">Sleep Timer Disabled Successfully</string>
    <string name="action_sleep_time_extension">the next day</string>
    <string name="eq_error">Equalizer not found</string>

</resources>
