<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/artist_nav"
        android:title="@string/artists" />

    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/album_nav"
        android:title="@string/albums" />

    <item
        android:id="@+id/navigation_songs"
        android:icon="@drawable/song_nav"
        android:title="@string/songs" />

    <item
        android:id="@+id/navigation_genres"
        android:icon="@drawable/genre_nav"
        android:title="@string/genres" />

    <item
        android:id="@+id/navigation_playlists"
        android:icon="@drawable/playlist_nav"
        android:title="@string/playlists" />

</menu>
