<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:fadingEdge="none"
    android:fillViewport="true"
    android:isScrollContainer="true"
    android:scrollbars="none"
    tools:context="com.damsky.danny.libremusic.ui.about.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5">

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableStart="@mipmap/ic_launcher"
                    android:paddingBottom="16dp"
                    android:text="@string/app_name"
                    android:textAllCaps="false"
                    android:textDirection="locale"
                    android:textSize="30sp" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/about_info"
                    android:paddingBottom="4dp"
                    android:text="@string/about_version"
                    android:textAllCaps="false"
                    android:textDirection="locale"
                    android:textSize="20sp" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/about_intro"
                    android:onClick="openIntro"
                    android:paddingBottom="4dp"
                    android:text="@string/about_intro"
                    android:textAllCaps="false"
                    android:textDirection="locale"
                    android:textSize="20sp" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/about_code"
                    android:onClick="openSourceCode"
                    android:paddingBottom="4dp"
                    android:text="@string/about_code"
                    android:textAllCaps="false"
                    android:textDirection="locale"
                    android:textSize="20sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5">

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableStart="@drawable/about_author"
                    android:paddingBottom="16dp"
                    android:text="@string/about_author"
                    android:textAllCaps="false"
                    android:textDirection="locale"
                    android:textSize="30sp" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/about_info"
                    android:paddingBottom="4dp"
                    android:text="@string/about_info"
                    android:textAllCaps="false"
                    android:textDirection="locale"
                    android:textSize="20sp" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/about_location"
                    android:paddingBottom="4dp"
                    android:text="@string/about_location"
                    android:textAllCaps="false"
                    android:textDirection="locale"
                    android:textSize="20sp" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/about_email"
                    android:onClick="writeEmail"
                    android:paddingBottom="4dp"
                    android:text="@string/about_email"
                    android:textAllCaps="false"
                    android:textDirection="locale"
                    android:textSize="20sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5">

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableStart="@drawable/about_support"
                    android:paddingBottom="16dp"
                    android:text="@string/about_support"
                    android:textAllCaps="false"
                    android:textDirection="locale"
                    android:textSize="30sp" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/about_rate"
                    android:onClick="openStorePageRating"
                    android:paddingBottom="4dp"
                    android:text="@string/about_rate"
                    android:textAllCaps="false"
                    android:textDirection="locale"
                    android:textSize="20sp" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/about_donate"
                    android:onClick="openStoreDonationPage"
                    android:paddingBottom="4dp"
                    android:text="@string/about_donate"
                    android:textAllCaps="false"
                    android:textDirection="locale"
                    android:textSize="20sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>


</ScrollView>
