<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/superView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/superToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="9dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/now_playing"
        app:titleTextColor="#FFF" />

    <ImageView
        android:id="@+id/coverArt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:adjustViewBounds="true"
        android:background="?attr/colorPrimary"
        android:elevation="1dp"
        android:scaleType="fitCenter"
        android:src="@drawable/song_big" />

    <TextView
        android:id="@+id/songName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/temp_songName"
        android:textAlignment="gravity"
        android:textColor="#FFF"
        android:textDirection="locale"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/temp_artistAlbumName"
        android:textAlignment="gravity"
        android:textColor="#FFF"
        android:textDirection="locale"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/indexInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="1 / 99999"
            android:textColor="#FFF"
            android:textDirection="locale" />

        <TextView
            android:id="@+id/countTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="00:00:00 / 59:59:59"
            android:textColor="#FFF"
            android:textDirection="locale"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artistName" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="8dp" />

    <LinearLayout
        android:id="@+id/now_playing_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:onClick="onRepeat"
            android:scaleType="fitCenter"
            android:src="@drawable/repeat_all" />

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:onClick="playPrevious"
            android:scaleType="fitCenter"
            android:src="@drawable/prev" />

        <ImageButton
            android:id="@+id/playPause"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:onClick="playPause"
            android:scaleType="fitCenter"
            android:src="@drawable/pause" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:onClick="playNext"
            android:scaleType="fitCenter"
            android:src="@drawable/next" />

        <ImageButton
            android:id="@+id/shuffle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:onClick="onShuffle"
            android:scaleType="fitCenter"
            android:src="@drawable/shuffle" />
    </LinearLayout>

</LinearLayout>
